--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Curso Desarrollo Web Completo",
   "main": "gulpfile.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  "test": "echo \"Error: no test specified\" && exit 1",
+  "build": "gulp"
+},
   "author": "Leandro Bazan",
   "license": "ISC",
   "devDependencies": {
